--- a/style.css
+++ b/style.css
@@ -46,6 +46,56 @@ body {
   color: grey;
   padding: 1.5rem;
 }
+/* @@@@@@@@@ Home Page */
+/* Home_center.php */
+.hc1 {
+  border: 2px solid grey;
+  background-color: rgb(159, 0, 61);
+  min-height: 400px;
+}
+.hc2 {
+  border: 2px solid grey;
+  background-color: rgb(162, 175, 204);
+  min-height: 400px;
+}
+.x {
+  height: 100px;
+  border: 1px solid black;
+}
+/* third row => sprawdzam relative = absolute positioning  */
+.rowOne {
+  position: relative;
+}
+.y {
+  height: 100px;
+  border: 1px solid black;
+  background-color: #6e6e6e;
+  z-index: 2;
+  opacity: 0.5;
+}
+.y:hover {
+  opacity: 1;
+}
+.thirdRowTxt {
+  float: right;
+  font-size: 50px;
+  font-weight: 700;
+  color: white;
+  font-family: Georgia, serif;
+}
+.thirdRowTxt:hover {
+  font-size: 52px;
+  font-weight: 900;
+  color: #2568fb;
+  font-family: 'Courier New', monospace;
+}
+.yy {
+  border: 1px solid black;
+  background-color: #abf62d;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+}
 
 /* media  => custom styling on responsive */
 @media (max-width: 991.98px) {
