--- a/style.css
+++ b/style.css
@@ -5,21 +5,12 @@ Author: Patryk
 Template: Fiber
 */
 body {
-  background-color: pink;
+  background-color: #c4c2c2;
 }
-/* TopMenuHeader */
-/* .menu-menu-topmenuheader-container {
-  background-color: antiquewhite;
-  text-align: center;
-}
-.menu-menu-topmenuheader-container > ul#menu-menu-topmenuheader {
-  list-style-type: none;
-  padding: 20px;
-} */
-
 /* Navbar Menu && Logo */
 .navbarHead {
-  background-color: rgb(192, 192, 192);
+  background-color: #0f0c24;
+  font-size: 1.3rem;
 }
 .menu > li {
   display: inline-block;
@@ -46,6 +37,10 @@ body {
   color: grey;
   padding: 1.5rem;
 }
+/* @@@@@@@@ Front-Page */
+.topDistance {
+  margin-top: 100px;
+}
 /* @@@@@@@@@ Home Page */
 /* Home_center.php */
 .hc1 {
@@ -65,40 +60,65 @@ body {
 /* third row => sprawdzam relative = absolute positioning  */
 .rowOne {
   position: relative;
+  /* background-color: #161f6d; */
+  background-image: url('http://127.0.0.1:8080/fiber/wp-content/uploads/2022/03/webdeveloping.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 700px;
 }
 .y {
-  height: 100px;
-  border: 1px solid black;
-  background-color: #6e6e6e;
+  height: 30%;
+  padding: 1em;
+  /* border: 1px solid white; */
+  border-right: 3px solid white;
+  border-bottom: 3px solid white;
+  /* background-color: #161f6d; */
   z-index: 2;
-  opacity: 0.5;
-}
-.y:hover {
-  opacity: 1;
-}
-.thirdRowTxt {
+  /* opacity: 1; */
   float: right;
-  font-size: 50px;
+  font-size: 4.25rem;
   font-weight: 700;
   color: white;
   font-family: Georgia, serif;
 }
-.thirdRowTxt:hover {
-  font-size: 52px;
-  font-weight: 900;
-  color: #2568fb;
+.y:hover {
+  /* opacity: 0.5; */
+  font-size: 4.25rem;
+  font-weight: 700;
+  /* border: 1px solid white; */
+  border-right: 3px solid white;
+  border-bottom: 3px solid white;
+  color: #abf62d;
   font-family: 'Courier New', monospace;
 }
 .yy {
-  border: 1px solid black;
-  background-color: #abf62d;
+  /* border: 1px solid black; */
+  background-color: #2568fb;
   height: 100%;
   z-index: 1;
   position: absolute;
 }
 
 /* media  => custom styling on responsive */
-@media (max-width: 991.98px) {
+@media screen and (max-width: 1200px) and (min-width: 992px) {
+  .y {
+    height: 50%;
+    font-size: 3.25rem;
+    float: right;
+    font-weight: 700;
+    color: white;
+    font-family: Georgia, serif;
+  }
+  .y:hover {
+    font-size: 1.75rem;
+    font-weight: 700;
+    color: #abf62d;
+    font-family: 'Courier New', monospace;
+  }
+}
+@media screen and (max-width: 992px) and (min-width: 768px) {
   .menu > li {
     width: 100%;
     display: grid;
@@ -106,7 +126,39 @@ body {
     text-align: center;
   }
   .marketingwsieci {
-    font-size: 15px;
+    /* 16px default text size => 1rem */
+    font-size: 1rem;
     font-weight: 900;
+  }
+  .y {
+    /* height: 50%; */
+    overflow: visible;
+    font-size: 2.75rem;
+    font-weight: 700;
+    color: white;
+  }
+  .y:hover {
+    font-size: 2.75rem;
+    font-weight: 700;
+    color: #abf62d;
+    font-family: 'Courier New', monospace;
+  }
+  .topDistance {
+    margin-top: 140px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .y {
+    /* height: 50%; */
+    overflow: visible;
+    font-size: 2.25rem;
+    font-weight: 700;
+    color: white;
+  }
+  .y:hover {
+    font-size: 1.75rem;
+    font-weight: 700;
+    color: #abf62d;
+    font-family: 'Courier New', monospace;
   }
 }
