--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
 /* Navbar Menu && Logo */
 .navbarHead {
   background-color: #0f0c24;
+  /* background-image: linear-gradient(to right, #0f0c24 65%, #2568fb 99%); */
   font-size: 1.3rem;
+  box-shadow: 5px 5px 50px 1px rgb(212, 211, 212);
 }
 .menu > li {
   display: inline-block;
@@ -43,15 +45,21 @@ body {
 }
 /* @@@@@@@@@ Home Page */
 /* Home_center.php */
+.cardsPanel {
+  box-shadow: 20px 1px 50px 30px red;
+}
 .hc1 {
   border: 2px solid grey;
-  background-color: rgb(159, 0, 61);
+  background-color: #abf62d;
   min-height: 400px;
 }
 .hc2 {
-  border: 2px solid grey;
-  background-color: rgb(162, 175, 204);
+  border: 2px solid #0f0c24;
+  background-color: grey;
   min-height: 400px;
+  padding: 0px;
+}
+.marketingPhoto {
 }
 .x {
   height: 100px;
@@ -65,40 +73,38 @@ body {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
+
   min-height: 700px;
 }
 .y {
   height: 30%;
   padding: 1em;
-  /* border: 1px solid white; */
-  border-right: 3px solid white;
-  border-bottom: 3px solid white;
-  /* background-color: #161f6d; */
+  margin-top: 20%;
+  margin-left: 2%;
+  border-right: 25px solid #abf62d;
+  background-color: #161f6d;
   z-index: 2;
   /* opacity: 1; */
   float: right;
   font-size: 4.25rem;
   font-weight: 700;
-  color: white;
+  color: #abf62d;
   font-family: Georgia, serif;
 }
 .y:hover {
   /* opacity: 0.5; */
   font-size: 4.25rem;
   font-weight: 700;
-  /* border: 1px solid white; */
-  border-right: 3px solid white;
-  border-bottom: 3px solid white;
-  color: #abf62d;
-  font-family: 'Courier New', monospace;
+  border-right: 25px solid white;
+  color: white;
+  font-family: Georgia, serif;
 }
-.yy {
-  /* border: 1px solid black; */
-  background-color: #2568fb;
+/* third row */
+.marketingPhoto {
   height: 100%;
-  z-index: 1;
-  position: absolute;
+  background-position: center center;
+  background-position: left 0px right 0px;
 }
 
 /* media  => custom styling on responsive */
@@ -115,7 +121,6 @@ body {
     font-size: 1.75rem;
     font-weight: 700;
     color: #abf62d;
-    font-family: 'Courier New', monospace;
   }
 }
 @media screen and (max-width: 992px) and (min-width: 768px) {
@@ -135,13 +140,11 @@ body {
     overflow: visible;
     font-size: 2.75rem;
     font-weight: 700;
-    color: white;
   }
   .y:hover {
     font-size: 2.75rem;
     font-weight: 700;
-    color: #abf62d;
-    font-family: 'Courier New', monospace;
+    color: white;
   }
   .topDistance {
     margin-top: 140px;
@@ -153,12 +156,10 @@ body {
     overflow: visible;
     font-size: 2.25rem;
     font-weight: 700;
-    color: white;
   }
   .y:hover {
     font-size: 1.75rem;
     font-weight: 700;
-    color: #abf62d;
-    font-family: 'Courier New', monospace;
+    color: white;
   }
 }
