--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Template: Fiber
 */
 body {
   /* background-color: #c4c2c2; */
-  background-color: #005995;
+  background-color: #161f6d;
 }
 /* Navbar Menu && Logo */
 .navbarHead {
@@ -25,19 +25,22 @@ body {
   font-weight: 900;
 }
 .marketingwsieci {
-  font-size: 9px;
+  font-size: 11px;
   font-weight: 900;
   text-align: center;
+  color: white;
 }
 .fiberlogo {
   font-size: 30px;
   font-weight: 800;
+  color: white;
 }
 
 .navbar-brand {
   /* background-color: goldenrod; */
-  background-image: linear-gradient(to bottom right, goldenrod, gold);
-  color: grey;
+  /* background-image: linear-gradient(to bottom right, goldenrod, gold); */
+  background-color: #ff0028;
+  background-image: linear-gradient(to bottom right, #ff0028, #9b111e);
   padding: 1.5rem;
 }
 /* @@@@@@@@ Front-Page */
@@ -52,7 +55,7 @@ body {
 }
 .hc1 {
   /* border: 2px solid grey; */
-  background-color: #005995;
+  background-color: #161f6d;
   min-height: 400px;
 }
 .hc2 {
@@ -114,6 +117,25 @@ body {
   background-color: #0f0c24;
   color: white;
 }
+.f1 {
+  background-color: #161f6d;
+  padding: 1%;
+  border: 1px solid black;
+  margin-top: 1%;
+}
+.f2 {
+  background-color: #161f6d;
+  padding: 1%;
+  border: 1px solid black;
+  margin-top: 1%;
+}
+.f3 {
+  background-color: #161f6d;
+  padding: 1%;
+  border: 1px solid black;
+  margin-top: 1%;
+}
+/* end of foot styling */
 
 /* media  => custom styling on responsive */
 @media screen and (max-width: 1200px) and (min-width: 992px) {
