--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
   font-size: 1.3rem;
   box-shadow: 5px 5px 50px 1px rgb(212, 211, 212);
 }
+.toggleButtonNavbar {
+  color: #eb1736;
+  font-weight: 800;
+  font-size: 0.95rem;
+}
 .menu > li {
   display: inline-block;
   margin-right: 50px;
@@ -104,8 +109,18 @@ body {
   font-weight: 800;
   font-size: 4.25rem;
 }
+.digitalText {
+  font-size: 4.25rem;
+  color: #c0c0c0;
+  font-weight: 800;
+}
+.digitalTextColor {
+  color: #0f0c24;
+  font-weight: 800;
+  font-size: 4.25rem;
+}
 .digitalWizytowka {
-  color: red;
+  color: #ff0028;
 }
 /* SEO section */
 .seo_left {
@@ -123,7 +138,7 @@ body {
 }
 .center {
   height: 32.3%;
-  border-bottom: 5px solid red;
+  border-bottom: 5px solid #ff0028;
   background-color: #161f6d;
   margin-top: 1%;
   color: #c0c0c0;
@@ -135,7 +150,7 @@ body {
   color: #2568fb;
   /* background-color:red; */
   background-image: linear-gradient(to bottom right, #0f0c24, #161f6d);
-  border-left: 5px solid red;
+  border-left: 5px solid #ff0028;
   text-align: left;
   padding: 2%;
   margin-top: 2%;
@@ -200,7 +215,7 @@ body {
   /* border: 1px solid black; */
   margin-top: 1%;
   box-shadow: 2px 2px 1px 1px #2568fb;
-  border-left: 5px solid red;
+  border-left: 5px solid #ff0028;
 }
 
 .boot_footer2 {
@@ -213,12 +228,14 @@ body {
 }
 .f4 {
   background-color: #161f6d;
-  border: 1px solid #0f0c24;
+  /* border-bottom: 1px solid #2568fb; */
+  box-shadow: 1px 2px 1px 1px #2568fb;
   color: #2568fb;
   text-align: center;
   min-height: 50px;
   padding: 2%;
   margin-right: 1%;
+  border-left: 5px solid #ff0028;
 }
 /* end of foot styling */
 
@@ -232,18 +249,17 @@ body {
     color: white;
     font-family: Georgia, serif;
   }
-  .y:hover {
-    font-size: 1.75rem;
-    font-weight: 700;
-    color: #abf62d;
-  }
 }
 @media screen and (max-width: 992px) and (min-width: 768px) {
   .menu > li {
     width: 100%;
     display: grid;
-    background-color: rgb(68, 26, 185);
+    /* background-color: rgb(68, 26, 185); */
     text-align: center;
+  }
+  .navbar-toggler-icon {
+    background-color: #eb1736;
+    border-radius: 5px;
   }
   .marketingwsieci {
     /* 16px default text size => 1rem */
@@ -272,23 +288,45 @@ body {
   .hc2 {
     min-height: 200px;
   }
+  .rowOne {
+    min-height: 400px;
+  }
   .y {
     /* height: 50%; */
     overflow: visible;
-    font-size: 2.25rem;
-    font-weight: 700;
-  }
-  .y:hover {
     font-size: 1.75rem;
     font-weight: 700;
-    color: white;
+    border-right: 0px solid white;
+    border-bottom: 20px solid white;
+  }
+  .ysmalltext {
+    font-size: 1rem;
+    font-family: Georgia, serif;
   }
   .navbar-toggler-icon {
     background-color: #eb1736;
     border-radius: 5px;
   }
+  .menu > li {
+    width: 100%;
+    display: grid;
+    text-align: center;
+  }
   .f4 {
     margin-top: 1%;
     margin-bottom: 1%;
+  }
+  .ofertaTextGlowny {
+    font-size: 2.25rem;
+  }
+  .digitalText {
+    font-size: 2.25rem;
+    color: #c0c0c0;
+    font-weight: 800;
+  }
+  .digitalTextColor {
+    color: #0f0c24;
+    font-weight: 800;
+    font-size: 2.75rem;
   }
 }
